syntax = "proto3";

package CacheServerApi;

message PBPlayer
{
	uint64 uin = 1;			// 玩家唯一标识
	int32 zone = 2;			// 玩家大区
	string account = 3;
	string nickname = 4;	// 玩家昵称
	int64 last_login_time = 5;	// 最后一次登录时间
	int64 login_server_id = 6;	// 登录的服务器实例id
}


enum AuthType {
	Test = 0;
}

message PBAccount {
	AuthType type = 1;
	string account = 2;
	int32 zone = 3;
	uint64 uin = 4;
}

message PBUin
{
	int32 zone = 1;
	uint64 nums = 2;
}

message PBNickname {
	string nickname = 1;
	int32 zone = 2;
	uint64 uin = 3;
}